Update Исследование надёжности заёмщиков.ipynb

--- a/Исследование надёжности заёмщиков/Исследование надёжности заёмщиков.ipynb
+++ b/Исследование надёжности заёмщиков/Исследование надёжности заёмщиков.ipynb
@@ -14,28 +14,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228618c3",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "827c20bf"
-   },
-   "source": [
-    "Во второй части проекта вы выполните шаги 3 и 4. Их вручную проверит ревьюер.\n",
-    "Чтобы вам не пришлось писать код заново для шагов 1 и 2, мы добавили авторские решения в ячейки с кодом. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "92264775",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "744d7639"
    },
    "source": [
-    "## Откройте таблицу и изучите общую информацию о данных"
+    "## Откроем таблицу и изучим общую информацию о данных"
    ]
   },
   {
@@ -43,13 +28,10 @@
    "id": "99144695",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "e7a14c31"
    },
    "source": [
-    "**Задание 1. Импортируйте библиотеку pandas. Считайте данные из csv-файла в датафрейм и сохраните в переменную `data`. Путь к файлу:**\n",
-    "\n",
-    "`/datasets/data.csv`"
+    "**Импортируем библиотеку pandas. Считаем данные из csv-файла в датафрейм и сохраним в переменную `data`.**"
    ]
   },
   {
@@ -75,11 +57,10 @@
    "id": "f77d2392",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "b8038fe3"
    },
    "source": [
-    "**Задание 2. Выведите первые 20 строчек датафрейма `data` на экран.**"
+    "**Выведем первые 20 строчек датафрейма `data` на экран.**"
    ]
   },
   {
@@ -514,11 +495,10 @@
    "id": "fc113439",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "1c12e233"
    },
    "source": [
-    "**Задание 3. Выведите основную информацию о датафрейме с помощью метода `info()`.**"
+    "**Выведем основную информацию о датафрейме с помощью метода `info()`.**"
    ]
   },
   {
@@ -590,11 +570,10 @@
    "id": "3392c841",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "cd84967c"
    },
    "source": [
-    "**Задание 4. Выведите количество пропущенных значений для каждого столбца. Используйте комбинацию двух методов.**"
+    "**Выведем количество пропущенных значений для каждого столбца. Используем комбинацию двух методов.**"
    ]
   },
   {
@@ -639,11 +618,10 @@
    "id": "a535a101",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "db86e27b"
    },
    "source": [
-    "**Задание 5. В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце вы обработаете на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполнить пропуски в этом столбце нужно медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` должен быть заполнен медианным доходом среди всех записей с тем же типом.**"
+    "**В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце обработаем на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполним пропуски в этом столбце медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` заполняем медианным доходом среди всех записей с тем же типом.**"
    ]
   },
   {
@@ -701,11 +679,10 @@
    "id": "7c6c6865",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "57964554"
    },
    "source": [
-    "**Задание 6. В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработайте значения в этом столбце: замените все отрицательные значения положительными с помощью метода `abs()`.**"
+    "**В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработаем значения в этом столбце: заменим все отрицательные значения положительными с помощью метода `abs()`.**"
    ]
   },
   {
@@ -726,11 +703,10 @@
    "id": "c8945d4f",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "6107dd2f"
    },
    "source": [
-    "**Задание 7. Для каждого типа занятости выведите медианное значение трудового стажа `days_employed` в днях.**"
+    "**Для каждого типа занятости выведем медианное значение трудового стажа `days_employed` в днях.**"
    ]
   },
   {
@@ -772,11 +748,10 @@
    "id": "6f181a04",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "38d1a030"
    },
    "source": [
-    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставьте их как есть. Тем более этот столбец не понадобится вам для исследования."
+    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставим их как есть. Тем более этот столбец не понадобится нам для исследования."
    ]
   },
   {
@@ -784,11 +759,10 @@
    "id": "608ddc9c",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "d8a9f147"
    },
    "source": [
-    "**Задание 8. Выведите перечень уникальных значений столбца `children`.**"
+    "**Выведем перечень уникальных значений столбца `children`.**"
    ]
   },
   {
@@ -821,11 +795,10 @@
    "id": "02553baa",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "40b9ebf2"
    },
    "source": [
-    "**Задание 9. В столбце `children` есть два аномальных значения. Удалите строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
+    "**В столбце `children` есть два аномальных значения. Удалим строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
    ]
   },
   {
@@ -846,11 +819,10 @@
    "id": "de35237c",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "bbc4d0ce"
    },
    "source": [
-    "**Задание 10. Ещё раз выведите перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
+    "**Ещё раз выведем перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
    ]
   },
   {
@@ -895,11 +867,10 @@
    "id": "6cce90b2",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "f4ea573f"
    },
    "source": [
-    "**Задание 11. Заполните пропуски в столбце `days_employed` медианными значениями по каждого типа занятости `income_type`.**"
+    "**Заполним пропуски в столбце `days_employed` медианными значениями по каждому типу занятости `income_type`.**"
    ]
   },
   {
@@ -922,11 +893,10 @@
    "id": "dd714af5",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "2753f40d"
    },
    "source": [
-    "**Задание 12. Убедитесь, что все пропуски заполнены. Проверьте себя и ещё раз выведите количество пропущенных значений для каждого столбца с помощью двух методов.**"
+    "**Убедимся, что все пропуски заполнены. Проверим себя и ещё раз выведим количество пропущенных значений для каждого столбца с помощью двух методов.**"
    ]
   },
   {
@@ -983,11 +953,10 @@
    "id": "8b6117e4",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "42d19d24"
    },
    "source": [
-    "**Задание 13. Замените вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
+    "**Заменим вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
    ]
   },
   {
@@ -1019,11 +988,10 @@
    "cell_type": "markdown",
    "id": "a82c0863",
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "source": [
-    "**Задание 14. Обработайте неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведите их к нижнему регистру. Проверьте остальные столбцы.**"
+    "**Обработаем неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведём их к нижнему регистру. Проверим остальные столбцы.**"
    ]
   },
   {
@@ -1043,11 +1011,10 @@
    "id": "f2192d05",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "dc587695"
    },
    "source": [
-    "**Задание 15. Выведите на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалите их.**"
+    "**Выведем на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалим их.**"
    ]
   },
   {
@@ -1105,11 +1072,10 @@
    "id": "21bd286a",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "72fcc8a2"
    },
    "source": [
-    "**Задание 16. На основании диапазонов, указанных ниже, создайте в датафрейме `data` столбец `total_income_category` с категориями:**\n",
+    "**На основании диапазонов, указанных ниже, создадим в датафрейме `data` столбец `total_income_category` с категориями:**\n",
     "\n",
     "- 0–30000 — `'E'`;\n",
     "- 30001–50000 — `'D'`;\n",
@@ -1118,7 +1084,7 @@
     "- 1000001 и выше — `'A'`.\n",
     "\n",
     "\n",
-    "**Например, кредитополучателю с доходом 25000 нужно назначить категорию `'E'`, а клиенту, получающему 235000, — `'B'`. Используйте собственную функцию с именем `categorize_income()` и метод `apply()`.**"
+    "**Например, кредитополучателю с доходом 25000 назначим категорию `'E'`, а клиенту, получающему 235000, — `'B'`. Используем собственную функцию с именем `categorize_income()` и метод `apply()`.**"
    ]
   },
   {
@@ -1165,11 +1131,10 @@
    "id": "5df5613e",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "dde49b5c"
    },
    "source": [
-    "**Задание 17. Выведите на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
+    "**Выведем на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
    ]
   },
   {
@@ -1220,20 +1185,19 @@
    "id": "d170bcb4",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "85d0aef0"
    },
    "source": [
-    "**Задание 18. Создайте функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
+    "**Создадим функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
     "\n",
     "- `'операции с автомобилем'`,\n",
     "- `'операции с недвижимостью'`,\n",
     "- `'проведение свадьбы'`,\n",
     "- `'получение образования'`.\n",
     "\n",
-    "**Например, если в столбце `purpose` находится подстрока `'на покупку автомобиля'`, то в столбце `purpose_category` должна появиться строка `'операции с автомобилем'`.**\n",
+    "**Например, если в столбце `purpose` находится подстрока `'на покупку автомобиля'`, то в столбце `purpose_category' появится строка 'операции с автомобилем'`.**\n",
     "\n",
-    "**Используйте собственную функцию с именем `categorize_purpose()` и метод `apply()`. Изучите данные в столбце `purpose` и определите, какие подстроки помогут вам правильно определить категорию.**"
+    "**Используем собственную функцию с именем `categorize_purpose()` и метод `apply()`. Изучим данные в столбце `purpose` и определим, какие подстроки помогут нам правильно определить категорию.**"
    ]
   },
   {
@@ -1278,11 +1242,10 @@
    "id": "5a9dd10a",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "09b242bf"
    },
    "source": [
-    "### Шаг 3. Исследуйте данные и ответьте на вопросы"
+    "### Исследуем данные и ответим на следующие вопросы:"
    ]
   },
   {
@@ -1290,11 +1253,10 @@
    "id": "9e40e873",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "c5d66278"
    },
    "source": [
-    "#### 3.1 Есть ли зависимость между количеством детей и возвратом кредита в срок?"
+    "#### Есть ли зависимость между количеством детей и возвратом кредита в срок?"
    ]
   },
   {
@@ -1322,7 +1284,7 @@
     }
    ],
    "source": [
-    "# Сформируем сводную таблицу \"количество детей / задолденность\"\n",
+    "# Сформируем сводную таблицу \"количество детей / задолженность\"\n",
     "debt_children = data.pivot_table(index=['children'], columns='debt', values='dob_years', aggfunc='count')\n",
     "print(debt_children)"
    ]
@@ -1493,11 +1455,10 @@
    "id": "39df8b1a",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "97be82ca"
    },
    "source": [
-    "#### 3.2 Есть ли зависимость между семейным положением и возвратом кредита в срок?"
+    "#### Выясним, есть ли зависимость между семейным положением и возвратом кредита в срок?"
    ]
   },
   {
@@ -1569,11 +1530,10 @@
    "id": "2e37c037",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "1e8b2fca"
    },
    "source": [
-    "#### 3.3 Есть ли зависимость между уровнем дохода и возвратом кредита в срок?"
+    "#### Есть ли зависимость между уровнем дохода и возвратом кредита в срок?"
    ]
   },
   {
@@ -1621,11 +1581,10 @@
    "id": "2393c565",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "99ecbd1f"
    },
    "source": [
-    "#### 3.4 Как разные цели кредита влияют на его возврат в срок?"
+    "#### Как разные цели кредита влияют на его возврат в срок?"
    ]
   },
   {
@@ -1672,11 +1631,10 @@
    "id": "bfd6f386",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "09c3ac4c"
    },
    "source": [
-    "#### 3.5 Приведите возможные причины появления пропусков в исходных данных."
+    "#### Приведём возможные причины появления пропусков в исходных данных:"
    ]
   },
   {
@@ -1687,7 +1645,7 @@
     "id": "9da2ceda"
    },
    "source": [
-    "*Ответ:* Пропуски были в двух столбцах: \"Ежемесячный доход\" и \"Трудовой стаж\". При чём, количество пропусков в каждом столбце одинаково. Возможные причины появления данных пропусков: - \"человеческий фактор\" (данные ячейки не заполнил сотрудник банка при оформлении кредита), недоработанная форма на сайте (при оформлении кредита на сайте банка, технологический фактор), либо потеря данных при сохранении/импорте/переносе (также технологический фактор). Также, перед заполнением пропусков в п.2.1 данного исследования, мы проанализировали ячейки \"тип занятости\". Оказалось, что строки с пропусками имеют заёмщики со статусом 'пенсионер', 'госслужащий', 'компаньон', 'сотрудник' и 'предприниматель'. Предполагаю, что данные физлица при оформлении кредита находились на социальной службе, либо работали в благотворительных организациях, с отсутствующим окладом."
+    "Пропуски были в двух столбцах: \"Ежемесячный доход\" и \"Трудовой стаж\". При чём, количество пропусков в каждом столбце одинаково. Возможные причины появления данных пропусков: - \"человеческий фактор\" (данные ячейки не заполнил сотрудник банка при оформлении кредита), недоработанная форма на сайте (при оформлении кредита на сайте банка, технологический фактор), либо потеря данных при сохранении/импорте/переносе (также технологический фактор). Также, перед заполнением пропусков в п.2.1 данного исследования, мы проанализировали ячейки \"тип занятости\". Оказалось, что строки с пропусками имеют заёмщики со статусом 'пенсионер', 'госслужащий', 'компаньон', 'сотрудник' и 'предприниматель'. Предполагаю, что данные физлица при оформлении кредита находились на социальной службе, либо работали в благотворительных организациях, с отсутствующим окладом."
    ]
   },
   {
@@ -1695,11 +1653,10 @@
    "id": "e197d0e7",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "7b0487d6"
    },
    "source": [
-    "#### 3.6 Объясните, почему заполнить пропуски медианным значением — лучшее решение для количественных переменных."
+    "#### Почему заполнить пропуски медианным значением — лучшее решение для количественных переменных:"
    ]
   },
   {
@@ -1710,7 +1667,7 @@
     "id": "7ecf2b8e"
    },
    "source": [
-    "*Ответ:* В остальных столбцах строк с пропусками - для нас существуют ценные данные, просто удалить строки недопустимо. Также строк с пропусками 2174 шт. их 21525 записей (10% данных). Если заполнить пропуски средним арифметическим - вариант не совсем удачный, т.к. возможные выбросы в зарплатах группы могут сильно исказить наши данные. Медиана более точно определяет среднее значение данных внутри группы."
+    "В остальных столбцах строк с пропусками - для нас существуют ценные данные, просто удалить строки недопустимо. Также строк с пропусками 2174 шт. их 21525 записей (10% данных). Если заполнить пропуски средним арифметическим - вариант не совсем удачный, т.к. возможные выбросы в зарплатах группы могут сильно исказить наши данные. Медиана более точно определяет среднее значение данных внутри группы."
    ]
   },
   {
@@ -1718,11 +1675,10 @@
    "id": "6fffe0f5",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "id": "6db5255a"
    },
    "source": [
-    "### Шаг 4: общий вывод."
+    "### Общий вывод:"
    ]
   },
   {
@@ -4179,6 +4135,7 @@
     "start_time": "2022-11-01T05:06:47.129Z"
    }
   ],
+  "celltoolbar": "Edit Metadata",
   "colab": {
    "name": "dpp_template_part2.ipynb",
    "provenance": []
@@ -4209,7 +4166,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "440.172px"
+   },
    "toc_section_display": true,
    "toc_window_display": false
   }
