Update Исследование надёжности заёмщиков.ipynb

--- a/Исследование надёжности заёмщиков/Исследование надёжности заёмщиков.ipynb
+++ b/Исследование надёжности заёмщиков/Исследование надёжности заёмщиков.ipynb
@@ -20,7 +20,7 @@
     "id": "744d7639"
    },
    "source": [
-    "## Откроем таблицу и изучим общую информацию о данных"
+    "## Открою таблицу и изучу общую информацию о данных"
    ]
   },
   {
@@ -31,7 +31,7 @@
     "id": "e7a14c31"
    },
    "source": [
-    "**Импортируем библиотеку pandas. Считаем данные из csv-файла в датафрейм и сохраним в переменную `data`.**"
+    "**Импортирую библиотеку pandas. Считаю данные из csv-файла в датафрейм и сохраню в переменную `data`.**"
    ]
   },
   {
@@ -60,7 +60,7 @@
     "id": "b8038fe3"
    },
    "source": [
-    "**Выведем первые 20 строчек датафрейма `data` на экран.**"
+    "**Отображу первые 20 строчек датафрейма `data` на экран.**"
    ]
   },
   {
@@ -498,7 +498,7 @@
     "id": "1c12e233"
    },
    "source": [
-    "**Выведем основную информацию о датафрейме с помощью метода `info()`.**"
+    "**Посмотрю основную информацию о датафрейме с помощью метода `info()`.**"
    ]
   },
   {
@@ -573,7 +573,7 @@
     "id": "cd84967c"
    },
    "source": [
-    "**Выведем количество пропущенных значений для каждого столбца. Используем комбинацию двух методов.**"
+    "**Выведу количество пропущенных значений для каждого столбца. Использую комбинацию двух методов.**"
    ]
   },
   {
@@ -621,7 +621,7 @@
     "id": "db86e27b"
    },
    "source": [
-    "**В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце обработаем на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполним пропуски в этом столбце медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` заполняем медианным доходом среди всех записей с тем же типом.**"
+    "**В двух столбцах есть пропущенные значения. Один из них — `days_employed`. Пропуски в этом столбце обработаю на следующем этапе. Другой столбец с пропущенными значениями — `total_income` — хранит данные о доходах. На сумму дохода сильнее всего влияет тип занятости, поэтому заполню пропуски в этом столбце медианным значением по каждому типу из столбца `income_type`. Например, у человека с типом занятости `сотрудник` пропуск в столбце `total_income` заполняю медианным доходом среди всех записей с тем же типом.**"
    ]
   },
   {
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "# Перед заполнением пропуска - попытаемся определить по какой причине они возникли\n",
+    "# Перед заполнением пропуска - попытаюсь определить по какой причине они возникли\n",
     "print(data[data['days_employed'].isna()]['income_type'].unique())"
    ]
   },
@@ -682,7 +682,7 @@
     "id": "57964554"
    },
    "source": [
-    "**В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработаем значения в этом столбце: заменим все отрицательные значения положительными с помощью метода `abs()`.**"
+    "**В данных могут встречаться артефакты (аномалии) — значения, которые не отражают действительность и появились по какой-то ошибке. таким артефактом будет отрицательное количество дней трудового стажа в столбце `days_employed`. Для реальных данных это нормально. Обработаю значения в этом столбце: заменю все отрицательные значения положительными с помощью метода `abs()`.**"
    ]
   },
   {
@@ -706,7 +706,7 @@
     "id": "6107dd2f"
    },
    "source": [
-    "**Для каждого типа занятости выведем медианное значение трудового стажа `days_employed` в днях.**"
+    "**Для каждого типа занятости выведу медианное значение трудового стажа `days_employed` в днях.**"
    ]
   },
   {
@@ -751,7 +751,7 @@
     "id": "38d1a030"
    },
    "source": [
-    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставим их как есть. Тем более этот столбец не понадобится нам для исследования."
+    "У двух типов (безработные и пенсионеры) получатся аномально большие значения. Исправить такие значения сложно, поэтому оставлю их как есть. Тем более этот столбец не понадобится для исследования."
    ]
   },
   {
@@ -762,7 +762,7 @@
     "id": "d8a9f147"
    },
    "source": [
-    "**Выведем перечень уникальных значений столбца `children`.**"
+    "**Выведу перечень уникальных значений столбца `children`.**"
    ]
   },
   {
@@ -798,7 +798,7 @@
     "id": "40b9ebf2"
    },
    "source": [
-    "**В столбце `children` есть два аномальных значения. Удалим строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
+    "**В столбце `children` есть два аномальных значения. Удалю строки, в которых встречаются такие аномальные значения из датафрейма `data`.**"
    ]
   },
   {
@@ -822,7 +822,7 @@
     "id": "bbc4d0ce"
    },
    "source": [
-    "**Ещё раз выведем перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
+    "**Ещё раз выведу перечень уникальных значений столбца `children`, чтобы убедиться, что артефакты удалены.**"
    ]
   },
   {
@@ -870,7 +870,7 @@
     "id": "f4ea573f"
    },
    "source": [
-    "**Заполним пропуски в столбце `days_employed` медианными значениями по каждому типу занятости `income_type`.**"
+    "**Заполню пропуски в столбце `days_employed` медианными значениями по каждому типу занятости `income_type`.**"
    ]
   },
   {
@@ -896,7 +896,7 @@
     "id": "2753f40d"
    },
    "source": [
-    "**Убедимся, что все пропуски заполнены. Проверим себя и ещё раз выведим количество пропущенных значений для каждого столбца с помощью двух методов.**"
+    "**Удостоверюсь, что все пропуски заполнены. Проверю себя и ещё раз выведу количество пропущенных значений для каждого столбца с помощью двух методов.**"
    ]
   },
   {
@@ -956,7 +956,7 @@
     "id": "42d19d24"
    },
    "source": [
-    "**Заменим вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
+    "**Заменю вещественный тип данных в столбце `total_income` на целочисленный с помощью метода `astype()`.**"
    ]
   },
   {
@@ -991,7 +991,7 @@
     "deletable": false
    },
    "source": [
-    "**Обработаем неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведём их к нижнему регистру. Проверим остальные столбцы.**"
+    "**Обработаю неявные дубликаты в столбце `education`. В этом столбце есть одни и те же значения, но записанные по-разному: с использованием заглавных и строчных букв. Приведу их к нижнему регистру. Проверю остальные столбцы.**"
    ]
   },
   {
@@ -1014,7 +1014,7 @@
     "id": "dc587695"
    },
    "source": [
-    "**Выведем на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалим их.**"
+    "**Выведу на экран количество строк-дубликатов в данных. Если такие строки присутствуют, удалю их.**"
    ]
   },
   {
@@ -1075,7 +1075,7 @@
     "id": "72fcc8a2"
    },
    "source": [
-    "**На основании диапазонов, указанных ниже, создадим в датафрейме `data` столбец `total_income_category` с категориями:**\n",
+    "**На основании диапазонов, указанных ниже, создам в датафрейме `data` столбец `total_income_category` с категориями:**\n",
     "\n",
     "- 0–30000 — `'E'`;\n",
     "- 30001–50000 — `'D'`;\n",
@@ -1084,7 +1084,7 @@
     "- 1000001 и выше — `'A'`.\n",
     "\n",
     "\n",
-    "**Например, кредитополучателю с доходом 25000 назначим категорию `'E'`, а клиенту, получающему 235000, — `'B'`. Используем собственную функцию с именем `categorize_income()` и метод `apply()`.**"
+    "**Например, кредитополучателю с доходом 25000 назначим категорию `'E'`, а клиенту, получающему 235000, — `'B'`. Использую собственную функцию с именем `categorize_income()` и метод `apply()`.**"
    ]
   },
   {
@@ -1134,7 +1134,7 @@
     "id": "dde49b5c"
    },
    "source": [
-    "**Выведем на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
+    "**Выведу на экран перечень уникальных целей взятия кредита из столбца `purpose`.**"
    ]
   },
   {
@@ -1188,7 +1188,7 @@
     "id": "85d0aef0"
    },
    "source": [
-    "**Создадим функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
+    "**Создам функцию, которая на основании данных из столбца `purpose` сформирует новый столбец `purpose_category`, в который войдут следующие категории:**\n",
     "\n",
     "- `'операции с автомобилем'`,\n",
     "- `'операции с недвижимостью'`,\n",
@@ -1197,7 +1197,7 @@
     "\n",
     "**Например, если в столбце `purpose` находится подстрока `'на покупку автомобиля'`, то в столбце `purpose_category' появится строка 'операции с автомобилем'`.**\n",
     "\n",
-    "**Используем собственную функцию с именем `categorize_purpose()` и метод `apply()`. Изучим данные в столбце `purpose` и определим, какие подстроки помогут нам правильно определить категорию.**"
+    "**Использую собственную функцию с именем `categorize_purpose()` и метод `apply()`. Изучу данные в столбце `purpose` и определю, какие подстроки помогут правильно определить категорию.**"
    ]
   },
   {
@@ -1245,7 +1245,7 @@
     "id": "09b242bf"
    },
    "source": [
-    "### Исследуем данные и ответим на следующие вопросы:"
+    "### Исследую данные и отвечу на следующие вопросы:"
    ]
   },
   {
@@ -1284,7 +1284,7 @@
     }
    ],
    "source": [
-    "# Сформируем сводную таблицу \"количество детей / задолженность\"\n",
+    "# Сформирую сводную таблицу \"количество детей / задолженность\"\n",
     "debt_children = data.pivot_table(index=['children'], columns='debt', values='dob_years', aggfunc='count')\n",
     "print(debt_children)"
    ]
@@ -1323,7 +1323,7 @@
     }
    ],
    "source": [
-    "# Применим функцию, выведем результат\n",
+    "# Применю функцию, выведу результат\n",
     "debt_children['percent'] = debt_children.apply(percent_count, axis=1)\n",
     "print(debt_children)"
    ]
@@ -1458,7 +1458,7 @@
     "id": "97be82ca"
    },
    "source": [
-    "#### Выясним, есть ли зависимость между семейным положением и возвратом кредита в срок?"
+    "#### Выясню, есть ли зависимость между семейным положением и возвратом кредита в срок?"
    ]
   },
   {
@@ -1482,7 +1482,7 @@
     }
    ],
    "source": [
-    "# Сформируем сводную таблицу \"Семейное положение / задолженность\"\n",
+    "# Сформирую сводную таблицу \"Семейное положение / задолженность\"\n",
     "debt_family_status = data.pivot_table(index=['family_status'], columns='debt', values='dob_years', aggfunc='count')\n",
     "print(debt_family_status)"
    ]
@@ -1508,7 +1508,7 @@
     }
    ],
    "source": [
-    "# Применим функцию расчёта процентов, выведем результат\n",
+    "# Применю функцию расчёта процентов, выведу результат\n",
     "debt_family_status['percent'] = debt_family_status.apply(percent_count, axis=1)\n",
     "print(debt_family_status)"
    ]
@@ -1522,7 +1522,7 @@
    },
    "source": [
     "**Вывод:** \n",
-    "Из таблицы видим, что при статусе \"не женат/не за мужем\" и в статусе \"гражданский брак\" - процент дебиторки на 2,5% выше по сравнению с другими статусами. При оформлении кредита лицам из данных категорий - нужно быть крайне осторожными."
+    "Из таблицы видно, что при статусе \"не женат/не за мужем\" и в статусе \"гражданский брак\" - процент дебиторки на 2,5% выше по сравнению с другими статусами. При оформлении кредита лицам из данных категорий - нужно быть крайне осторожными."
    ]
   },
   {
@@ -1634,7 +1634,7 @@
     "id": "09c3ac4c"
    },
    "source": [
-    "#### Приведём возможные причины появления пропусков в исходных данных:"
+    "#### Приведу возможные причины появления пропусков в исходных данных:"
    ]
   },
   {
@@ -1645,7 +1645,7 @@
     "id": "9da2ceda"
    },
    "source": [
-    "Пропуски были в двух столбцах: \"Ежемесячный доход\" и \"Трудовой стаж\". При чём, количество пропусков в каждом столбце одинаково. Возможные причины появления данных пропусков: - \"человеческий фактор\" (данные ячейки не заполнил сотрудник банка при оформлении кредита), недоработанная форма на сайте (при оформлении кредита на сайте банка, технологический фактор), либо потеря данных при сохранении/импорте/переносе (также технологический фактор). Также, перед заполнением пропусков в п.2.1 данного исследования, мы проанализировали ячейки \"тип занятости\". Оказалось, что строки с пропусками имеют заёмщики со статусом 'пенсионер', 'госслужащий', 'компаньон', 'сотрудник' и 'предприниматель'. Предполагаю, что данные физлица при оформлении кредита находились на социальной службе, либо работали в благотворительных организациях, с отсутствующим окладом."
+    "Пропуски были в двух столбцах: \"Ежемесячный доход\" и \"Трудовой стаж\". При чём, количество пропусков в каждом столбце одинаково. Возможные причины появления данных пропусков: - \"человеческий фактор\" (данные ячейки не заполнил сотрудник банка при оформлении кредита), недоработанная форма на сайте (при оформлении кредита на сайте банка, технологический фактор), либо потеря данных при сохранении/импорте/переносе (также технологический фактор). Также, перед заполнением пропусков в п.2.1 данного исследования, я проанализировал ячейки \"тип занятости\". Оказалось, что строки с пропусками имеют заёмщики со статусом 'пенсионер', 'госслужащий', 'компаньон', 'сотрудник' и 'предприниматель'. Предполагаю, что данные физлица при оформлении кредита находились на социальной службе, либо работали в благотворительных организациях, с отсутствующим окладом."
    ]
   },
   {
