--- a/Классификаиция клиентов телеком компании/Классификаиция клиентов телеком компании.ipynb
+++ b/Классификаиция клиентов телеком компании/Классификаиция клиентов телеком компании.ipynb
@@ -11,16 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В вашем распоряжении данные о поведении клиентов, которые уже перешли на эти тарифы (из проекта курса «Статистический анализ данных»). Нужно построить модель для задачи классификации, которая выберет подходящий тариф. Предобработка данных не понадобится — мы её уже сделали.\n",
+    "В вашем распоряжении данные о поведении клиентов, которые уже перешли на эти тарифы (из проекта курса «Статистический анализ данных»). Нужно построить модель для задачи классификации, которая выберет подходящий тариф. Предобработка данных не понадобится — мы её уже сделали ранее.\n",
     "\n",
-    "Необходимо построить модель с максимально большим значением *accuracy*. Чтобы сдать проект успешно, нужно довести долю правильных ответов по крайней мере до 0.75. Проверьте *accuracy* на тестовой выборке самостоятельно."
+    "Необходимо построить модель с максимально большим значением *accuracy*. Чтобы достигнуть цель проекта, нужно довести долю правильных ответов по крайней мере до 0.75. Проверить *accuracy* на тестовой выборке."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Откройте и изучите файл"
+    "## Откроем и изучим файл"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Разбейте данные на выборки"
+    "## Разобъём данные на выборки"
    ]
   },
   {
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Исследуйте модели"
+    "## Исследуем модели"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Проверьте модель на тестовой выборке"
+    "## Проверим модель на тестовой выборке"
    ]
   },
   {
@@ -603,7 +603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (бонус) Проверьте модели на адекватность"
+    "## Проверим модели на адекватность"
    ]
   },
   {
